config git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,11 @@
 .idea/modules.xml
 .idea/Theseus.iml
 .idea/vcs.xml
-Theseus/web/index.php
+Theseus/.idea/workspace.xml
+Theseus/.idea/scopes/scope_settings.xml
+Theseus/.idea/.name
+Theseus/.idea/encodings.xml
+Theseus/.idea/misc.xml
+Theseus/.idea/modules.xml
+Theseus/.idea/Theseus.iml
+Theseus/.idea/vcs.xml
