ajout class client, control client, include header, include footer

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ Theseus/.idea/modules.xml
 Theseus/.idea/Theseus.iml
 Theseus/.idea/vcs.xml
 Theseus/.idea/workspace.xml
+Theseus/.idea/encodings.xml
+Theseus/.idea/workspace.xml
+Theseus/.idea/Theseus.iml
+Theseus/.idea/workspace.xml
