--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,8 @@ Theseus/.idea/encodings.xml
 Theseus/.idea/workspace.xml
 Theseus/.idea/Theseus.iml
 Theseus/.idea/workspace.xml
+Theseus/.idea/dataSources.ids
+Theseus/.idea/dataSources.local.xml
+Theseus/.idea/workspace.xml
+Theseus/.idea/dataSources.xml
+Theseus/web/img/products/Approche_de_migration_d'une_base_de_données_relationnelles_vers_une_base_NoSQL.pdf
