Modif orthographe popup back office

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ Theseus/.idea/dataSources.ids
 Theseus/.idea/dataSources.local.xml
 Theseus/.idea/dataSources.xml
 Theseus/web/img/products/Approche_de_migration_d'une_base_de_données_relationnelles_vers_une_base_NoSQL.pdf
+.idea/dataSources.local.xml
