--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ Theseus/.idea/dataSources.local.xml
 Theseus/.idea/dataSources.xml
 Theseus/web/img/products/Approche_de_migration_d'une_base_de_données_relationnelles_vers_une_base_NoSQL.pdf
 .idea/dataSources.local.xml
+.idea/dataSources.xml
+.idea/dataSources.local.xml
