--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,15 @@
         }
     ],
     "autoload": {
-        "psr-0":{"" : "Theseus/app/"}
+        "psr-0":{
+            "" : "Theseus/app/"
+        }
     },
     "require-dev": {
+        "php": ">=5.3.2",
+        "twig/twig": ">=1.4",
+        "ensepar/html2pdf": "dev-master",
+        "twig/extensions": "1.3.0",
         "phpmd/phpmd" : "@stable"
     }
 }
